# 365-days-of-code

./: README.md
2024/fiverr-dev/xlsx_manager/: .rustfmt.toml  Cargo.toml  README.md  config.toml
2024/fiverr-dev/xlsx_manager/script/: ClangInstallWindows.md  install_llvm_on_windows.ps1
2024/fiverr-dev/xlsx_manager/src/: config.rs  main.rs
2024/fiverr-dev/xlsx_manager/src/routes/: api.rs  file_ops.rs  index.rs  mod.rs  request.rs  response.rs  zip_ops.rs
2024/fiverr-dev/xlsx_manager/src/xlsx_manager/: file_ops.rs  mod.rs  xlsx_manager.rs
2024/fiverr-dev/xlsx_manager/static/: index.html  script.js  styles.css
