[package]
name = "xlsx_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
xlsxwriter = "0.6.1"
calamine = "0.26.1"
actix-web = "4.9.0"
actix-files = "0.6.6"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
walkdir = "2.5.0"
uuid = { version = "1.10.0", features = ["v4"] }
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
futures = "0.3.31"
zip = "2.2.0"
config = "0.14.0"
toml = "0.8.19"
thiserror = "1.0.64"

